# argos3-webviz

./: README.md  spike_ws_measure.js
.agentic/logs/: project-setup-20260426T183048.jsonl  proposal-lifecycle-20260421T043133.jsonl  proposal-lifecycle-20260421T044100.jsonl  proposal-lifecycle-20260421T051857.jsonl  proposal-lifecycle-20260421T052242.jsonl  proposal-lifecycle-20260421T132257.jsonl  proposal-lifecycle-20260421T135022.jsonl  proposal-lifecycle-20260421T135621.jsonl  proposal-lifecycle-20260421T193950.jsonl  proposal-lifecycle-20260421T210251.jsonl  proposal-lifecycle-20260421T210649.jsonl  proposal-lifecycle-20260421T213218.jsonl  proposal-lifecycle-20260422T031930.jsonl  proposal-lifecycle-20260426T182508.jsonl  proposal-lifecycle-20260426T182518.jsonl  proposal-lifecycle-20260426T203709.jsonl  proposal-lifecycle-20260426T231519.jsonl  proposal-lifecycle-20260426T231904.jsonl  proposal-lifecycle-20260426T232055.jsonl  proposal-lifecycle-20260426T232238.jsonl  proposal-lifecycle-20260427T012502.jsonl  proposal-lifecycle-20260427T021811.jsonl  proposal-lifecycle-20260427T023935.jsonl  proposal-lifecycle-20260429T021829.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.md  proposal.md
.github/workflows/: test.yml
client-next/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  spikes.html  vite.config.ts  vitest.config.ts
client-next/src/: App.tsx  index.css  main.tsx
client-next/tests/: helpers.ts
client-next/tools/: speed-bench.cjs
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPUTED_FIELDS.md  CONTRIBUTING.md  DRAW_FUNCTIONS.md  FILE_FORMAT.md  README.md  UI_CONTROLS.md  USER_FUNCTIONS.md  VIZ_HINTS.md  WEBVIZ_EXPOSE.md  basic_usage.md  controlling_experiment.md  developing_webviz.md  sending_data_from_server.md  writing_custom_client.md
docs/designs/: PN-006-benchmarking-testing.md  PN-018-timeline-scrubber.md  PN-019-entity-manipulation.md  PN-022-proximity-ray-frame-fix.md  PN-029-draw-functions-wiring.md  PN-031-server-data-pipeline.md  PN-032-client-rendering-pipeline.md  PN-033-adaptive-delivery.md  README.md
docs/proposals/: 001-client-next-default.md  002-delta-protocol.md  003-recorder-replay.md  004-viz-system.md  005-computed-fields.md  006-benchmarking-testing.md  007-leo-renderer.md  FUTURE.md  PARITY.md  PN-001-client-next-default.md  PN-002-delta-protocol.md  PN-003-recorder-replay.md  PN-004-viz-system.md  PN-005-computed-fields.md  PN-006-benchmarking-testing.md  PN-007-leo-renderer.md  PN-008-draw-primitives.md  PN-009-integration-fixes.md  PN-010-viewport-polish.md  PN-011-entity-body-color.md  PN-012-configurable-defaults.md  PN-013-floating-panels.md  PN-014-speed-control.md  PN-017-multi-experiment-dashboard.md  PN-018-timeline-scrubber.md  PN-019-entity-manipulation.md  PN-020-feature-registry.md  PN-021-render-tiers.md  PN-022-proximity-ray-frame-fix.md  (+13 more)
src/: CMakeLists.txt
src/plugins/simulator/visualizations/webviz/: CMakeLists.txt  webviz.cpp  webviz.h  webviz_draw_functions.cpp  webviz_draw_functions.h  webviz_expose.h  webviz_recorder.cpp  webviz_recorder.h  webviz_user_functions.cpp  webviz_user_functions.h  webviz_webserver.cpp  webviz_webserver.h
src/plugins/simulator/visualizations/webviz/entity/: webviz_box.cpp  webviz_cylinder.cpp  webviz_leo.cpp
(+127 files in other folders)
